V8 Switch mode fixed

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
 </head>
 
 <body>
+    <div class="loader">
+        <span>
+        </span>
+    </div>
     <!-- NAVBAR -->
     <header>
         <div class="container">
             <div class="nav transparant">
                 <a href="#">
                     <div class="nav-logo">
-                        <img src="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-                            alt="">
                         <p>Ibnu Abbas</p>
                     </div>
                 </a>
@@ -48,7 +50,7 @@
                         <li><a href="#contact" data-target="contact">Hubungi Kami</a></li>
                         <li><a href="">PPDB</a></li>
                         <li>
-                            <div color-theme-toggle class="dark-button"><span title="Dark mode toggle"></span></div>
+                            <div color-theme-toggle class="dark-button"><span title="Switch mode"></span></div>
                         </li>
                     </ul>
                 </nav>
@@ -67,28 +69,30 @@
         <div class="img"></div>
         <div class="container" data-aos="fade-up" data-aos-delay="500" data-aos-duration="500" data-aos-once="true">
             <div class="title">
-                <h1>&emsp;GAK MONDOK <br>&emsp;&emsp;&emsp; GAK <span
-                        style="background-color: var(--blue);color: var(--gray); padding: 0px 20px;">KEREN</span> </h1>
+                <h1>GAK MONDOK <img
+                        src="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                        class="woi" alt=""><br>&nbsp;&nbsp;&emsp;&emsp; GAK <span
+                        style="background-color: var(--blue);color: var(--gray); padding: 0px 20px;">KEREN</span></h1>
             </div>
             <div class="cta">
                 <div class="cta-item">
-                    <i class="fa-regular fa-info-circle fa-7x" style="color: var(--blue);"></i><br><br>
+                    <i class="fa-regular fa-info-circle fa-6x" style="color: var(--blue);"></i><br><br>
                     <div class="desc">
-                        <h1>TENTANG KAMI</h1>
+                        <h3>TENTANG KAMI</h3>
                         <a href="#about">Lebih lanjut</a>
                     </div>
                 </div>
                 <div class="cta-item">
-                    <i class="fa-regular fa-clipboard-list-check fa-7x" style="color: var(--blue);"></i>
+                    <i class="fa-regular fa-clipboard-list-check fa-6x" style="color: var(--blue);"></i>
                     <div class="desc">
-                        <h1>PROGRAM</h1>
+                        <h3>PROGRAM</h3>
                         <a href="#program">Lebih lanjut</a>
                     </div>
                 </div>
                 <div class="cta-item">
-                    <i class="fa-regular fa-phone fa-6x" style="color: var(--blue);"></i>
+                    <i class="fa-regular fa-phone fa-5x" style="color: var(--blue);"></i>
                     <div class="desc">
-                        <h1>HUBUNGI KAMI</h1>
+                        <h3>HUBUNGI KAMI</h3>
                         <a href="#contact">Lebih lanjut</a>
                     </div>
                 </div>
@@ -100,7 +104,8 @@
     <section class="beranda" id="beranda">
         <div class="container">
             <div class="center-title" data-aos="fade-right" data-aos-delay="500" data-aos-once="true">
-                <hr style="border: 2.5px var(--gray) solid; max-width: 100px !important; min-width: 40px !important; width: 10vw;">
+                <hr
+                    style="border: 2.5px var(--gray) solid; max-width: 100px !important; min-width: 40px !important; width: 10vw;">
                 <h1 style="color: var(--blueGray);">Beranda</h1>
             </div>
             <div class="des" data-aos="fade-left" data-aos-delay="1000" data-aos-duration="500"
@@ -401,7 +406,8 @@
     <section class="contact" id="contact">
         <div class="container">
             <div class="center-title" style="padding-top: 60px;">
-            <hr style="border: 2px var(--blue) solid; min-width: 50px !important; max-width:140px !important;width: 7vw;">
+                <hr
+                    style="border: 2px var(--blue) solid; min-width: 50px !important; max-width:140px !important;width: 7vw;">
                 <h1 style="color: var(--gray);">CONTACT</h1>
             </div>
             <div class="contact-grid">
@@ -478,10 +484,7 @@
     <script>
         AOS.init();
     </script>
-    <!--? JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
 </body>
 
 </html>
