--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <!-- ? Favicon -->
     <link rel="shortcut icon"
-        href="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+        href="https://www.figma.com/file/vzrM6iOiM779EerhXP3Gy0/image/77be497466243624295027cac6fc6e15e8a53ef6"
         type="image/x-icon">
     <!-- ? Swiper.js CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
@@ -70,7 +70,7 @@
         <div class="container" data-aos="fade-up" data-aos-delay="500" data-aos-duration="500" data-aos-once="true">
             <div class="title">
                 <h1>GAK MONDOK <img
-                        src="https://s3-alpha-sig.figma.com/img/77be/4974/66243624295027cac6fc6e15e8a53ef6?Expires=1698624000&Signature=OJqIWCBpV8rbCXkHJyPlGmLCz1gAVGo7TpGHfiVLLU-PE-dwKGerODIyNAHITpYyCAvzmGKwVQ7RlaDQ2udG3DAahhWl3TdnXTlr23upgyo6dNWGz7hny~lkSleYG8rcnlmaps37Op58WeXTRp3oUKHmeWbt6IisXZsTPG8G6yN5E3LbXTgKzP75uYHN00U3cNI3XDkHgx1oFo4JyRTewHJmWHBBtV1sh4VLrD953zs5~oorGxoC9f3RspcFmEo9~~GzYP7NoGWXL-SqbZUPQfo0~iIw13ZqJQFiWXIvDnKF40pYupkM8YsfylfH80LM-7TizGguMA~B-6wfbpoT1A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                        src="https://www.figma.com/file/vzrM6iOiM779EerhXP3Gy0/image/77be497466243624295027cac6fc6e15e8a53ef6"
                         class="woi" alt=""><br>&nbsp;&nbsp;&emsp;&emsp; GAK <span
                         style="background-color: var(--blue);color: var(--gray); padding: 0px 20px;">KEREN</span></h1>
             </div>
@@ -119,7 +119,7 @@
                     seperti ekstrakurikuler (ekskul), organisasi siswa, komunitas belajar, tim olahraga, dan
                     perpustakaan sehingga siswa dapat belajar secara maksimal. Proses belajar dibuat senyaman
                     mungkin bagi murid dan siswa.</p>
-                <img src="https://s3-alpha-sig.figma.com/img/e080/cbb4/7ea53606e66cd0b5e0cfccc2c79d35e1?Expires=1698624000&Signature=MoUTxfjTdIiD-4hir~ItufZFS6QEscD0D1jvE4BiT4PWCKksaDyR2xyERt1RpBNlig2Ha9PwxmDjS5Vzs7HEqMzqgPmQN1RNExeNSGpCqmGLynNm2DcyGeVYAaCFppMjp80tm1iGxLx4ipEmXC9Bw9W37~DgtPevioFqLHJoZ1Zc-Kh2aRTvbIB09pUWw-UaDqbbmMipZGySIH6Ua7J3ESWRBTjNd6pC5iKAjz9zX9b-G-raFRGUJ4vrz58oUcPtsEVBbgn6lHV28wOk0wf-czf-HWk37LpHNNTNNw9lntxW4wcFjJH48t72ESNtCJrMZ3Fs1nFEGlyG19QAeSe9mw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                <img src="https://www.figma.com/file/vzrM6iOiM779EerhXP3Gy0/image/e080cbb47ea53606e66cd0b5e0cfccc2c79d35e1"
                     alt="">
             </div>
         </div>
@@ -170,7 +170,7 @@
                 <h1>MUDIR IBNU ABBAS</h1>
             </div>
             <div class="ustdz">
-                <img src="https://s3-alpha-sig.figma.com/img/b432/17d2/3b5a6a57e71cba6ee13a94b6fd04ba53?Expires=1698624000&Signature=C2tK9nJwWc5kCyuC-9m2KBWM5T27gp2-HiRgKVnZVV0jJ7Ne7oSB1I2ANo0p84z9eR6MLHIAreS-o71ZX9DrhY0Zw1a8W8mT891eg-LLSoeAKF2yPfTgDMAN4dqPunJW1sUN1yrklpH3PEqO1LoBaPA8ooG2JoP6LuWCxjV0e0fXORB7swyrpi9sJk1SAab1LPAq9eCakmh~ihvfBY9jwHjQ0rSf6dJWFTOnZvASmL1o11lY3Ynx2cYfjcXgTdF6LP5pzP7P2j6opJ8tnxigWoBrvEWpdYh1sMnQizaeDK~y8Z4wJhbLvdKtxhbnxX8aQiWzYrcCdmW7tvJV42pAfw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
+                <img src="https://www.figma.com/file/vzrM6iOiM779EerhXP3Gy0/image/b43217d23b5a6a57e71cba6ee13a94b6fd04ba53"
                     alt="">
                 <div class="ustd-des">
                     <h1>USTADZ<br>FAJAR ABDURRAHMAN</h1>
